--- a/index.html
+++ b/index.html
@@ -258,6 +258,38 @@
             margin-top: 2rem;
             font-size: 0.7rem;
             color: #444;
+            margin-bottom: 0.5rem;
+        }
+
+        /* --- GITHUB BUTTON --- */
+        .github-btn {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            width: 44px;
+            height: 44px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border: 1px solid rgba(212, 175, 55, 0.3);
+            border-radius: 12px;
+            color: var(--gold-primary);
+            background: rgba(0, 0, 0, 0.3);
+            transition: all 0.3s ease;
+            z-index: 10;
+        }
+
+        .github-btn:hover {
+            background: var(--gold-primary);
+            color: #000;
+            transform: scale(1.1) rotate(5deg);
+            box-shadow: 0 0 15px rgba(212, 175, 55, 0.4);
+        }
+
+        .github-btn svg {
+            width: 24px;
+            height: 24px;
+            fill: currentColor;
         }
     </style>
 </head>
@@ -265,11 +297,18 @@
 <body>
 
     <div class="card">
+        <a href="https://github.com/eldivategar/simple-tinyurl-go" target="_blank" class="github-btn"
+            title="View on GitHub">
+            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path
+                    d="M12 0C5.374 0 0 5.373 0 12c0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
+            </svg>
+        </a>
         <h1>Exquisite URL</h1>
         <p class="subtitle">Premium Shortener Service. Ephemeral & Secure.</p>
 
         <div class="input-group">
-            <input type="url" id="longUrl" placeholder="Paste your long link here..." required>
+            <input type="url" id="longUrl" placeholder="Paste your long link here..." autofocus required>
         </div>
 
         <button id="shortenBtn" onclick="shortenUrl()">Shorten Now</button>
@@ -286,6 +325,7 @@
         </div>
 
         <div class="footer">Made with ❤️ by developer</div>
+
     </div>
 
     <script>
@@ -300,7 +340,7 @@
             const shortLinkDisplay = document.getElementById('shortLinkDisplay');
             const apiMessage = document.getElementById('apiMessage');
 
-            const url = longUrlInput.value.trim();
+            let url = longUrlInput.value.trim();
 
             // Reset UI
             errorMsg.style.display = 'none';
@@ -308,6 +348,11 @@
 
             if (!url) {
                 showError("Please enter a valid URL.");
+                return;
+            }
+
+            if (!isValidUrl(url)) {
+                showError("Invalid link! Check your link again.");
                 return;
             }
 
@@ -323,7 +368,11 @@
                     body: JSON.stringify({ long_url: url })
                 });
 
-                if (!response.ok) throw new Error(`Server Error: ${response.status}`);
+                if (!response.ok) {
+                    // Coba baca pesan error dari backend (text)
+                    const errorText = await response.text();
+                    throw new Error(errorText || `Server Error: ${response.status}`);
+                }
 
                 const data = await response.json();
 
@@ -336,11 +385,21 @@
 
             } catch (err) {
                 console.error(err);
-                showError("Connection failed. Please try again.");
+                // Tampilkan pesan error spesifik jika ada
+                showError(err.message || "Connection failed. Please try again.");
             } finally {
                 shortenBtn.disabled = false;
                 shortenBtn.innerText = "SHORTEN NOW";
                 shortenBtn.style.opacity = "1";
+            }
+        }
+
+        function isValidUrl(string) {
+            try {
+                new URL(string);
+                return true;
+            } catch (_) {
+                return false;
             }
         }
 
@@ -369,6 +428,15 @@
                 }, 2000);
             });
         }
+
+        // Auto-focus logic for better mobile support attempt
+        window.addEventListener('load', () => {
+            const input = document.getElementById('longUrl');
+            if (input) {
+                input.focus();
+                input.click(); // Hack for some mobile browsers
+            }
+        });
     </script>
 </body>
 
